Modifico tarjetas de proyectos, y archivos varios

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -12,12 +12,14 @@ const personalImageAlt = "Agustin Acevedo";
       ¡Hola, soy Agus! Profesional de TI apasionado por la tecnología.
       Actualmente me desenvuelvo como <strong
         >Sysadmin en la Universidad Tecnológica Nacional (UTN)</strong
-      > en donde también estudio la carrera de Ingeniería en Sistemas de la Información.
+      > en donde también estudio la carrera de <strong
+        >Ingeniería en Sistemas de la Información</strong
+      >.
     </p>
 
     <p>
       Paralelamente complemento mis estudios con cursos y certificaciones en <strong
-        >desarrollo de software, DevOps, SRE, Cloud Computing, Networking y
+        >Lenguajes de Programación, DevOps, SRE, Cloud Computing, Networking y
         Seguridad Informática</strong
       >.
     </p>
