--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -27,8 +27,9 @@ const personalImageAlt = "Agustin Acevedo";
     <p>
       Como analogía al horóscopo, uso <strong>Debian</strong> con <strong
         >Gnome</strong
-      > en mi estación de trabajo. Mi objetivo profesional es mantenerme a la vanguardia
-      de las tecnologías implementadas en el area de IT.
+      > y <strong>Tilix</strong> en mi estación de trabajo. Mi objetivo profesional
+      es mantenerme a la vanguardia de las tecnologías implementadas en el area de
+      IT.
     </p>
   </div>
 
