--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,9 +8,9 @@ const navItems = [
     url: "/#experiencia",
   },
   {
-    title: "Proyectos",
-    label: "proyectos",
-    url: "/#proyectos",
+    title: "Certificados",
+    label: "certificados",
+    url: "/#certificados",
   },
   {
     title: "Sobre mí",
@@ -18,9 +18,9 @@ const navItems = [
     url: "/#sobre-mi",
   },
   {
-    title: "Contacto",
-    label: "contacto",
-    url: "mailto:agus.acevedo2000@gmail.com",
+    title: "Stack",
+    label: "stack",
+    url: "/#stack",
   },
 ];
 ---
