--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,21 +6,21 @@ const EXPERIENCE = [
     title: "Administrador de Sistemas",
     company: "Universidad Tecnológica Nacional",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
+      "Como parte del equipo de Administración de Sistemas, Redes e Infraestructura, me especializo en la gestión de servidores, redes y entornos en la nube. Colaboro estrechamente para garantizar la continuidad operativa, el rendimiento y, especialmente, la seguridad de los sistemas. Contribuyo a implementar prácticas DevOps, automatizando procesos para una eficiencia operativa óptima. Mi enfoque se centra en resolver proactivamente problemas, implementar medidas de seguridad sólidas y explorar nuevas tecnologías para optimizar la infraestructura tecnológica.",
   },
   {
     date: "Apr 2021 - Mar 2023",
     title: "Soporte IT",
     company: "Universidad Tecnológica Nacional",
     description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+      "Especializado en brindar asistencia técnica, gestionar incidencias, y garantizar la continuidad operativa de sistemas y aplicaciones críticas. Experto en diagnóstico y solución de problemas de hardware, software y redes, con habilidades excepcionales de comunicación para traducir complejidades técnicas en términos comprensibles. Proactivo en la identificación de oportunidades de mejora, implementación de soluciones preventivas y optimización de procesos para maximizar la eficiencia",
   },
   {
     date: "Jul 2018 - Dec 2018",
     title: "Soporte IT",
     company: "Colegio Pio IX",
     description:
-      "Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de aplicaciones web. Mejora de un 30% en la entrega de software. Implantación de medidas de integración continua y despliegue con A/B testing en más de 15 equipos.",
+      "Encargado de brindar asistencia técnica integral a usuarios, gestionando incidencias y garantizando la operatividad de sistemas y aplicaciones. Realicé diagnóstico y solución de problemas de hardware, software y redes. Contribuí activamente a la optimización de procesos y aprendí continuamente para ofrecer un soporte efectivo.",
   },
 ];
 ---
