--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,16 +6,17 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer
-  class="rounded-lg shadow m-4 bg-black/5 dark:bg-black/20 backdrop-blur-lg w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10 flex justify-center"
+  class="rounded-lg shadow m-4 bg-black/5 dark:bg-black/20 backdrop-blur-lg w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10 flex items-center justify-center"
 >
   <div
-    class="w-full max-w-screen-xl mx-auto md:flex md:items-center md:justify-between"
+    class="w-full max-w-screen-xl mx-auto md:flex items-center md:justify-between"
   >
-    <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
+    <span
+      class="text-sm items-center flex justify-center sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
       >© {currentYear}
       - Made by Agustin Acevedo and ☕️
     </span>
-    <div class="flex">
+    <div class="flex justify-center mb-4 mt-3">
       <a
         href="https://www.linkedin.com/in/agustinezequielacevedo/"
         target="_blank"
@@ -40,7 +41,7 @@ const currentYear = new Date().getFullYear();
     </div>
 
     <ul
-      class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
+      class="flex justify-center flex-wrap items-center mt-4 text-sm font-medium dark:text-white/90 sm:mt-0"
     >
       <li>
         <a href="/#top" class="hover:underline me-4 md:me-6">Home</a>
