--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,10 +6,10 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer
-  class="rounded-lg shadow m-4 bg-black/5 dark:bg-black/20 backdrop-blur-lg w-full mx-auto container lg:max-w-4xl md:max-w-2xl mb-10 flex items-center justify-center"
+  class="rounded-lg shadow m-4 bg-black/5 dark:bg-black/20 backdrop-blur-lg w-full mx-auto container lg:max-w-4xl md:max-w-2xl flex items-center justify-center"
 >
   <div
-    class="w-full max-w-screen-xl mx-auto md:flex items-center md:justify-between"
+    class="p-4 w-full max-w-screen-xl mx-auto md:flex items-center md:justify-between"
   >
     <span
       class="text-sm items-center flex justify-center sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
