--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -1,4 +1,4 @@
-<article class="flex-container">
+<article class="grid grid-cols-3 md:grid-cols-4 gap-6 lg:grid-cols-5">
   <div class="flex-item">
     <h4 class="font-semibold text-xl text-yellow-400">Sistemas Operativos</h4>
     <ul>
