--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import Stack from "@/components/Stack.astro";
   <div class="space-y-24">
     <SectionContainer id="experiencia">
       <h2
-        class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
+        class="titulo-main flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
       >
         <Briefcase class="size-8" />
         Experiencia laboral
@@ -35,7 +35,7 @@ import Stack from "@/components/Stack.astro";
 
     <SectionContainer id="certificados">
       <h2
-        class="flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
+        class="titulo-main flex items-center mb-6 text-3xl font-semibold gap-x-3 text-black/80 dark:text-white"
       >
         <CodeIcon class="size-7" />
         Certificaciones y Badges
@@ -45,7 +45,7 @@ import Stack from "@/components/Stack.astro";
 
     <SectionContainer id="sobre-mi">
       <h2
-        class="flex items-center mb-6 text-3xl font-semibold gap-x-8 text-black/80 dark:text-white"
+        class="titulo-main flex items-center mb-6 text-3xl font-semibold gap-x-8 text-black/80 dark:text-white"
       >
         <ProfileCheck class="size-8" />
         Sobre mí
@@ -54,7 +54,7 @@ import Stack from "@/components/Stack.astro";
     </SectionContainer>
     <SectionContainer id="stack">
       <h2
-        class="flex items-center mb-6 text-3xl font-semibold gap-x-8 text-black/80 dark:text-white"
+        class="titulo-main flex items-center mb-6 text-3xl font-semibold gap-x-8 text-black/80 dark:text-white"
       >
         <Stackicon class="size-8" />
         Stack Tecnológico
@@ -63,3 +63,9 @@ import Stack from "@/components/Stack.astro";
     </SectionContainer>
   </div>
 </Layout>
+
+<style>
+  .titulo-main {
+    margin-left: 10px;
+  }
+</style>
