--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,7 +18,12 @@ import LinkedinPill from "@/components/LinkedinPill.astro";
   />
   <div class="order-2 object-cover h-full p-1">
     <h1
-      class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
+      class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white md:hidden text-center"
+    >
+      Agustin Acevedo
+    </h1>
+    <h1
+      class="hidden md:flex text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
     >
       Agustin Acevedo
     </h1>
