magia boton mostrar mas y mostrar menos

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -52,6 +52,7 @@ const PROJECTS = [
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3091080",
     image:
       "https://cdn.qwiklabs.com/xRejIPM4k6VgI8%2B%2B2Nz5bFHFx8PwK0nn9oQofkJOsS4%3D",
+    cl: "no-oculto",
   },
   {
     title: "Create and Manage Cloud Resources",
@@ -60,6 +61,7 @@ const PROJECTS = [
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3098272",
     image:
       "https://cdn.qwiklabs.com/TbOoOcpQdNxRawSvSE3K5cbakxBmki8F%2FgjwN6yKY98%3D",
+    cl: "no-oculto",
   },
   {
     title: "Network Performance and Optimization",
@@ -68,6 +70,7 @@ const PROJECTS = [
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3102799",
     image:
       "https://cdn.qwiklabs.com/9qikCAvRUMlQZkRAj3FqOQN00x3Jk%2BiA3QtkuhoRGvY%3D",
+    cl: "no-oculto",
   },
   {
     title: "Set Up and Configure a Cloud Environment",
@@ -76,6 +79,7 @@ const PROJECTS = [
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3103636",
     image:
       "https://cdn.qwiklabs.com/Z5mHEcZSfjDvSjtBRmzjgY1O5B9uT%2BJME8KqR%2FgmmyI%3D",
+    cl: "no-oculto",
   },
   {
     title: "Perform Foundational Infrastructure Tasks",
@@ -84,6 +88,7 @@ const PROJECTS = [
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3103704",
     image:
       "https://cdn.qwiklabs.com/SOUHCWvev6HmfC5QztXJd%2BCkSK8%2B3WGWg%2BF%2Fww%2FfqXA%3D",
+    cl: "no-oculto",
   },
   {
     title: "Build and Secure Networks",
@@ -92,6 +97,7 @@ const PROJECTS = [
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3111946",
     image:
       "https://cdn.qwiklabs.com/6QsPX5Wdg0eHWFed3ZKTbX2c88yVFGgaWPlYt%2BJdp4Q%3D",
+    cl: "no-oculto",
   },
   {
     title: "Serverless Firebase Development",
@@ -100,6 +106,7 @@ const PROJECTS = [
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3112487",
     image:
       "https://cdn.qwiklabs.com/vi9U3TnPxXdjiaH1GwmBT2Q1GXpSJ%2FoWYVbWaxj%2FYpk%3D",
+    cl: "hidden",
   },
   {
     title: "Serverless Cloud Run Development",
@@ -108,6 +115,7 @@ const PROJECTS = [
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3112739",
     image:
       "https://cdn.qwiklabs.com/Ai2kcbL3CEc9Yylwr2z2PabrBhBdJMvd6PLrD7AcJqo%3D",
+    cl: "hidden",
   },
   {
     title: "Baseline: Infrastructure",
@@ -116,6 +124,7 @@ const PROJECTS = [
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3112920",
     image:
       "https://cdn.qwiklabs.com/Eg%2FSbOy66StYJSJgDWYLrHAMVb%2F28ZfyndLzHYtQPeA%3D",
+    cl: "hidden",
   },
   {
     title: "Cloud Engineering",
@@ -124,6 +133,7 @@ const PROJECTS = [
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3112922",
     image:
       "https://cdn.qwiklabs.com/CK1Zt1Rct6URvfcD6V89kJapt5%2BrX8gcZoW6T6qpfhQ%3D",
+    cl: "no-oculto",
   },
   {
     title: "Build Apps & Websites with Firebase",
@@ -132,6 +142,7 @@ const PROJECTS = [
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3112928",
     image:
       "https://cdn.qwiklabs.com/JdUu8WCGmvzBQnppDxG%2Fn1IoguiHNd0O%2FtdP3yWyv4Q%3D",
+    cl: "hidden",
   },
   {
     title: "Diplomatura Django Framework",
@@ -140,6 +151,7 @@ const PROJECTS = [
     link: "https://media.licdn.com/dms/image/D4D2DAQF3CcWNIEk0Ig/profile-treasury-document-images_1920/1/1706689163030?e=1709164800&v=beta&t=cYJjS-kUOFw6Pl34gfQy1BR90TqAC926CAu0yi0VVMw",
     image:
       "https://media.licdn.com/dms/image/D4D2DAQF3CcWNIEk0Ig/profile-treasury-document-images_1920/1/1706689163030?e=1709164800&v=beta&t=cYJjS-kUOFw6Pl34gfQy1BR90TqAC926CAu0yi0VVMw",
+    cl: "no-oculto",
   },
   {
     title: "Django Avanzado - En Producción",
@@ -148,6 +160,7 @@ const PROJECTS = [
     link: "https://media.licdn.com/dms/image/D4D2DAQGc9RgTlb12FA/profile-treasury-document-images_1920/1/1706689026768?e=1709164800&v=beta&t=xDnkU2QKp_HMwwvFSCfo5y0FJOxgh5ZCOe91R06WB5s",
     image:
       "https://media.licdn.com/dms/image/D4D2DAQGc9RgTlb12FA/profile-treasury-document-images_1920/1/1706689026768?e=1709164800&v=beta&t=xDnkU2QKp_HMwwvFSCfo5y0FJOxgh5ZCOe91R06WB5s",
+    cl: "hidden",
   },
   {
     title: "Django Intermedio - Diseño de Plataformas",
@@ -156,6 +169,7 @@ const PROJECTS = [
     link: "https://media.licdn.com/dms/image/D4D2DAQHD37bBHkBMpQ/profile-treasury-document-images_1920/1/1706689384487?e=1709164800&v=beta&t=sET0V4xyseEjCHW-WMpeuekyJfo0DQOGT-gcvOkTEdo",
     image:
       "https://media.licdn.com/dms/image/D4D2DAQHD37bBHkBMpQ/profile-treasury-document-images_1920/1/1706689384487?e=1709164800&v=beta&t=sET0V4xyseEjCHW-WMpeuekyJfo0DQOGT-gcvOkTEdo",
+    cl: "hidden",
   },
   {
     title: "Django Inicial - Arquitectura",
@@ -164,6 +178,7 @@ const PROJECTS = [
     link: "https://media.licdn.com/dms/image/D4D2DAQFBK51Nf97XYQ/profile-treasury-document-images_1920/1/1706689740894?e=1709164800&v=beta&t=jmhYqs0nQ5PNlKBgYBPZ-c3iL3SluhGtlhBn_hPbbbk",
     image:
       "https://media.licdn.com/dms/image/D4D2DAQFBK51Nf97XYQ/profile-treasury-document-images_1920/1/1706689740894?e=1709164800&v=beta&t=jmhYqs0nQ5PNlKBgYBPZ-c3iL3SluhGtlhBn_hPbbbk",
+    cl: "hidden",
   },
   {
     title: "Diplomatura Python",
@@ -172,6 +187,7 @@ const PROJECTS = [
     link: "https://media.licdn.com/dms/image/D4D2DAQEyr6JabhTo-Q/profile-treasury-document-images_1920/1/1706689887273?e=1709164800&v=beta&t=Hb5_ZWqzHsevwEYPZE3jtki7uD-TGOasjpoMrnc0VyY",
     image:
       "https://media.licdn.com/dms/image/D4D2DAQEyr6JabhTo-Q/profile-treasury-document-images_1920/1/1706689887273?e=1709164800&v=beta&t=Hb5_ZWqzHsevwEYPZE3jtki7uD-TGOasjpoMrnc0VyY",
+    cl: "no-oculto",
   },
   {
     title: "Python 3 - Avanzado",
@@ -180,6 +196,7 @@ const PROJECTS = [
     link: "https://media.licdn.com/dms/image/D4D2DAQEK0WzqPdE8ow/profile-treasury-document-images_1920/1/1706689914746?e=1709164800&v=beta&t=b-yt31bN7hEeetEPeNAChjJAvTMIvz8wWvGIJVursZY",
     image:
       "https://media.licdn.com/dms/image/D4D2DAQEK0WzqPdE8ow/profile-treasury-document-images_1920/1/1706689914746?e=1709164800&v=beta&t=b-yt31bN7hEeetEPeNAChjJAvTMIvz8wWvGIJVursZY",
+    cl: "hidden",
   },
   {
     title: "Python 3 - Intermedio",
@@ -188,6 +205,7 @@ const PROJECTS = [
     link: "https://media.licdn.com/dms/image/D4D2DAQGOigc24OgSng/profile-treasury-document-images_1920/1/1706689941975?e=1709164800&v=beta&t=mCA6b7MFOTK1yW_LQGDcxy1BQ1BDWcYSXMUOpd3zGPk",
     image:
       "https://media.licdn.com/dms/image/D4D2DAQGOigc24OgSng/profile-treasury-document-images_1920/1/1706689941975?e=1709164800&v=beta&t=mCA6b7MFOTK1yW_LQGDcxy1BQ1BDWcYSXMUOpd3zGPk",
+    cl: "hidden",
   },
   {
     title: "Python 3 - Inicial",
@@ -196,6 +214,7 @@ const PROJECTS = [
     link: "https://media.licdn.com/dms/image/D4D2DAQEbbF40J6tywg/profile-treasury-document-images_1920/1/1706689963277?e=1709164800&v=beta&t=FzWt4L2m9hRAwnQtcHGb4c7aljoso1ND0bEz338XbQA",
     image:
       "https://media.licdn.com/dms/image/D4D2DAQEbbF40J6tywg/profile-treasury-document-images_1920/1/1706689963277?e=1709164800&v=beta&t=FzWt4L2m9hRAwnQtcHGb4c7aljoso1ND0bEz338XbQA",
+    cl: "hidden",
   },
   {
     title: "Redes de Datos - Avanzado",
@@ -204,6 +223,7 @@ const PROJECTS = [
     link: "https://media.licdn.com/dms/image/D4D2DAQF--NXbRRMVfQ/profile-treasury-document-images_1920/1/1706689772423?e=1709164800&v=beta&t=6dWNZj_mb96nt-TbZWjJZ3JozNZgSpRw3Zy1eEX4Vq0",
     image:
       "https://media.licdn.com/dms/image/D4D2DAQF--NXbRRMVfQ/profile-treasury-document-images_1920/1/1706689772423?e=1709164800&v=beta&t=6dWNZj_mb96nt-TbZWjJZ3JozNZgSpRw3Zy1eEX4Vq0",
+    cl: "no-oculto",
   },
   {
     title: "Redes de Datos - Inicial",
@@ -212,6 +232,7 @@ const PROJECTS = [
     link: "https://media.licdn.com/dms/image/D4D2DAQFGpq3UPsTYUA/profile-treasury-document-images_1920/1/1706689826725?e=1709164800&v=beta&t=AGAz1PVlXp360bWkR4SK9oVysSPXH8lJ0XgVHiGD_iU",
     image:
       "https://media.licdn.com/dms/image/D4D2DAQFGpq3UPsTYUA/profile-treasury-document-images_1920/1/1706689826725?e=1709164800&v=beta&t=AGAz1PVlXp360bWkR4SK9oVysSPXH8lJ0XgVHiGD_iU",
+    cl: "hidden",
   },
   {
     title: "Configuration Management and the Cloud",
@@ -220,6 +241,7 @@ const PROJECTS = [
     link: "https://coursera.org/verify/54VYBRBEZNU5",
     image:
       "https://s3.amazonaws.com/coursera_assets/meta_images/generated/CERTIFICATE_LANDING_PAGE/CERTIFICATE_LANDING_PAGE~54VYBRBEZNU5/CERTIFICATE_LANDING_PAGE~54VYBRBEZNU5.jpeg",
+    cl: "no-oculto",
   },
   {
     title: "Programming for Everybody",
@@ -228,6 +250,7 @@ const PROJECTS = [
     link: "https://coursera.org/verify/JABBD5CQNSGA",
     image:
       "https://s3.amazonaws.com/coursera_assets/meta_images/generated/CERTIFICATE_LANDING_PAGE/CERTIFICATE_LANDING_PAGE~JABBD5CQNSGA/CERTIFICATE_LANDING_PAGE~JABBD5CQNSGA.jpeg",
+    cl: "hidden",
   },
   {
     title: "AWS Cloud Quest: Cloud Practitioner",
@@ -236,6 +259,7 @@ const PROJECTS = [
     link: "https://www.credly.com/badges/045e8502-1b39-4ca2-9303-11c74f827053/public_url",
     image:
       "https://images.credly.com/size/680x680/images/2784d0d8-327c-406f-971e-9f0e15097003/image.png",
+    cl: "no-oculto",
   },
   {
     title: "Academician",
@@ -243,6 +267,7 @@ const PROJECTS = [
     date: "13 Apr 2023",
     link: "https://academy.hackthebox.com/achievement/badge/6db79208-da0a-11ed-acfc-bea50ffe6cb4",
     image: "https://academy.hackthebox.com/storage/badges/academician.png",
+    cl: "no-oculto",
   },
   {
     title: "Data Analyst",
@@ -251,14 +276,17 @@ const PROJECTS = [
     link: "https://cutt.ly/mY31JRM",
     image:
       "https://api.coderhouse.com/ch-www-api/certifications/61bd5ab2bc1e0300526d2060/print?lang=es",
+    cl: "hidden",
   },
 ];
 ---
 
 <div class="grid grid-cols-3 md:grid-cols-4 gap-6 lg:grid-cols-5">
   {
-    PROJECTS.map(({ image, title, date, link, issuer }) => (
-      <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
+    PROJECTS.map(({ image, title, date, link, issuer, cl }) => (
+      <article
+        class={`magia flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0 ${cl}`}
+      >
         <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-5 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
           <a href={link}>
             <div>
@@ -293,3 +321,36 @@ const PROJECTS = [
     ))
   }
 </div>
+
+<button class="show-button">Show more</button>
+<button class="hidden hide-button">Show less</button>
+
+<script>
+  // Find all buttons with the `alert` class on the page.
+  const showButton = document.querySelector(".show-button");
+  const hideButton = document.querySelector(".hide-button");
+  const articles = document.querySelectorAll(".magia"); // Replace with the actual class of your articles
+
+  showButton.addEventListener("click", () => {
+    showButton.classList.add("hidden");
+    hideButton.classList.remove("hidden");
+
+    articles.forEach((article) => {
+      article.classList.remove("hidden");
+    });
+  });
+
+  hideButton.addEventListener("click", () => {
+    hideButton.classList.add("hidden");
+    showButton.classList.remove("hidden");
+
+    articles.forEach((article) => {
+      if (
+        !article.classList.contains("hidden") &&
+        !article.classList.contains("no-oculto")
+      ) {
+        article.classList.add("hidden");
+      }
+    });
+  });
+</script>
